--- a/ngrinder-frontend/package.json
+++ b/ngrinder-frontend/package.json
@@ -20,6 +20,8 @@
     "bootbox": "^5.2.0",
     "bootstrap": "4.3.1",
     "chart.js": "^2.7.2",
+    "core-js": "^3.2.1",
+    "es6-promise": "^4.2.8",
     "font-awesome": "^4.7.0",
     "i18next": "^15.0.5",
     "i18next-browser-languagedetector": "^3.0.1",
@@ -32,22 +34,22 @@
     "jstz": "^2.1.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
-    "moment-timezone": "^0.5.25",
     "moment-duration-format": "^2.2.2",
+    "moment-timezone": "^0.5.25",
+    "numeral": "^2.0.6",
     "popper.js": "^1.15.0",
     "promise-retry": "^1.1.1",
     "q": "^1.4.1",
-    "numeral": "^2.0.6",
     "retry-axios": "^0.3.2",
     "vee-validate": "^2.2.0",
     "vue": "^2.6.10",
     "vue-authenticate": "^1.3.4",
     "vue-bootstrap-slider": "^2.1.8",
-    "vue-filter-number-format": "^2.0.0",
     "vue-chartjs": "^3.3.1",
     "vue-clipboard2": "0.0.8",
     "vue-codemirror": "^4.0.6",
     "vue-context-menu": "^2.0.6",
+    "vue-filter-number-format": "^2.0.0",
     "vue-form-wizard": "^0.8.4",
     "vue-headful": "^2.0.1",
     "vue-localstorage": "^0.6.2",
@@ -61,26 +63,23 @@
     "vue2-timepicker": "^0.1.4",
     "vuebar": "0.0.20",
     "vuedraggable": "^2.15.0",
-    "vuetable-2": "^1.7.5",
     "vuejs-paginate": "^2.0.1",
+    "vuetable-2": "^1.7.5",
     "vuex": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.6.2",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-decorators": "^7.6.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/polyfill": "^7.6.0",
+    "@babel/preset-env": "^7.6.2",
     "babel-cli": "^6.26.0",
-    "babel-core": "6",
     "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-component": "^0.10.1",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4 ",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-es2017": "^6.22.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-component": "^1.1.1",
+    "babel-register": "^6.26.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "eslint": "^4.19.1",
